SR-11323: NSCalendar functions are not thread safe

- Add a CFLock_t to __CFCalendar and add locking around CoreFoundation
  calendar calls that mutate the calendar.